# FGT-BackEnd

./: .env  README.md
app/: manage.py  pyproject.toml  requirements.txt
app/app/: settings.py  urls.py
app/core/: admin.py  authentication.py
app/core/migrations/: 0001_initial.py  0002_fornecedor_remove_pedido_empresa_and_more.py  0003_funcionario.py  0004_produto_quantidade_prod.py  0005_remove_itempedido_pedido_remove_itempedido_produto_and_more.py  0006_remove_servico_endereço_solicitante_and_more.py  0007_servico_data_os.py  0008_rename_data_os_servico_data_emissao_and_more.py  0009_orcamento_servico_ordemservico_delete_pedido.py  0010_alter_servico_produto_utilizado.py  0011_remove_orcamento_endereco_orca.py  0012_remove_orcamento_cliente_alter_ordemservico_cliente_and_more.py  0013_budget_customer_employee_product_service_and_more.py  0014_supplier.py  0015_service_quantity_remove_service_product_and_more.py  0016_remove_serviceorder_service_serviceorder_service.py  0017_alter_budget_date_budget_alter_product_price_product.py  0018_user_delete_usuario.py  0019_user_passage_id_alter_user_groups_and_more.py  0020_alter_user_passage_id.py  0021_alter_user_passage_id.py  0022_alter_user_passage_id.py
app/core/models/: ItemPedido.py  __init__.py  budget.py  cliente.py  customer.py  employee.py  empresa.py  financa.py  fornecedor.py  funcionario.py  orcamento.py  ordemServico.py  pedido.py  product.py  produto.py  service.py  serviceOrder.py  servico.py  supplier.py  user.py  usuario.py
app/core/serializers/: ItemPedido.py  __init__.py  budget.py  cliente.py  customer.py  employee.py  empresa.py  financa.py  fornecedor.py  funcionario.py  orcamento.py  ordemServico.py  pedido.py  product.py  produto.py  service.py  serviceOrder.py  servico.py  supplier.py  user.py  usuario.py
app/core/views/: ItemPedido.py  __init__.py  authentication.py  budget.py  cliente.py  customer.py  employee.py  empresa.py  financa.py  fornecedor.py  funcionario.py  orcamento.py  ordemServico.py  pedido.py  product.py  produto.py  service.py  serviceOrder.py  servico.py  supplier.py  usuario.py
